CIMET-1, CIMET-2, CIMET-14 - Add multi-repo support, bug fixes (#3)
* First implementation of multi-repo cloning

* Update test + bug fixes